--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -20,10 +20,8 @@ jobs:
       - name: Install dev dependencies
         run:  pip install -r requirements_test.txt
       - name: Run Linter
-        run:  "Trainee should add command to run flake8"
+        run:  flake8 scripts
       - name: Run Vulture
-        run:  "Trainee should add command to run vulture"
+        run: vulture scripts
       - name: Run tests
-        run:  "Trainee should add command to run test"
-
-
+        run: pytest tests/test_unit/test_feature_engineering.py
