--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -20,8 +20,8 @@ jobs:
       - name: Install dev dependencies
         run:  pip install -r requirements_test.txt
       - name: Run Linter
-        run:  flake8 scripts
+        run: flake8 formation_indus_ds_avancee
       - name: Run Vulture
-        run: vulture scripts
+        run: vulture formation_indus_ds_avancee scripts --min-confidence 100
       - name: Run tests
-        run: pytest tests/test_unit/test_feature_engineering.py
+        run: python -m pytest tests/test_unit
