--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,3 +27,8 @@ jobs:
         run: |
           python -m pytest tests/test_unit
           behave tests/test_functional/features
+      - name: Check quality
+        run: |
+          python -m pytest --cov=formation_indus_ds_avancee/ tests/test_unit/ -vv -p no:warnings
+          ./tests/tests_pyramid.sh
+
