add step quality in ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,9 @@ jobs:
         run: |
           python -m pytest tests/test_unit
           behave tests/test_functional/features
+  qualite:
+    runs-on: ubuntu-latest
+    steps:
       - name: Check quality
         run: |
           python -m pytest --cov=formation_indus_ds_avancee/ tests/test_unit/ -vv -p no:warnings
